--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for spring-boot-hello-world on 2025-12-24T04:31:28Z
+# fly.toml app configuration file generated for spring-boot-hello-world on 2025-12-24T05:12:02Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = 'spring-boot-hello-world'
-primary_region = 'ewr'
+primary_region = 'iad'
 
 [build]
 
